Added first draft of discussion section

--- a/sleep-disorder-analysis.ipynb
+++ b/sleep-disorder-analysis.ipynb
@@ -2134,6 +2134,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e1f92f2",
+   "metadata": {},
+   "source": [
+    "## Summary of Findings\n",
+    "\n",
+    "The analysis revealed strong negative correlations between sleep duration, sleep quality, and stress levels, with sleep quality being the most significant predictor. The linear regression model explained approximately 52% of the variance in stress levels, indicating that these sleep-related features are meaningful but not exhaustive predictors of stress.\n",
+    "\n",
+    "## Expected vs Actual Outcomes\n",
+    "\n",
+    "The findings aligned with our expectations that better sleep patterns would correlate with lower stress levels. However, the model's moderate predictive accuracy suggests that while sleep is a crucial factor, other variables likely contribute significantly to stress. This highlights the complexity of stress as a multifaceted phenomenon influenced by various lifestyle, psychological, and environmental factors.\n",
+    "\n",
+    "## Impact and Applications\n",
+    "\n",
+    "Understanding the relationship between sleep and stress has important implications for public health. Interventions aimed at improving sleep quality and duration could be effective strategies for stress reduction. There is however a lingering question of which direction the causality goes—does poor sleep lead to higher stress, or does high stress lead to poor sleep? Future studies could explore this bidirectional relationship further.\n",
+    "\n",
+    "## Future work\n",
+    "\n",
+    "Future research could try to establish the correct direction of causality between sleep and stress through longitudinal studies. Additionally, incorporating more comprehensive lifestyle and psychological variables could enhance the predictive power of models assessing stress levels. Exploring non-linear modeling techniques may also capture complex relationships not addressed by linear regression."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "495dd001",
    "metadata": {},
    "source": [
