fixed everything from the milestone 1 feedback

--- a/sleep-disorder-analysis.ipynb
+++ b/sleep-disorder-analysis.ipynb
@@ -16,7 +16,12 @@
    "source": [
     "## 1. Summary\n",
     "\n",
-    "In this project, we explore how an individual’s sleep wellness relates to their reported stress level using the Sleep Health and Lifestyle Dataset. Our goal is to investigate whether sleep patterns can help explain or predict how stressed a person feels. To do this, we perform exploratory data analysis to understand trends in the data and examine whether shorter or irregular sleep is associated with higher stress. We then build a predictive model to evaluate how well sleep duration and related lifestyle variables can estimate a person’s stress level. This analysis aims to provide insight into the connection between sleep habits and stress, and to identify whether simple, easily measurable lifestyle information can meaningfully contribute to stress assessment."
+    "In this project, we explore how an individual’s sleep wellness relates to their reported stress level using the Sleep Health and Lifestyle Dataset. Our goal is to investigate whether sleep patterns can help explain or predict how stressed a person feels. To do this, we perform exploratory data analysis to understand trends in the data and examine whether shorter or irregular sleep is associated with higher stress. We then build a predictive model to evaluate how well sleep duration and related lifestyle variables can estimate a person’s stress level. This analysis aims to provide insight into the connection between sleep habits and stress, and to identify whether simple, easily measurable lifestyle information can meaningfully contribute to stress assessment.\n",
+    "\n",
+    "Emerging epigenetic evidence demonstrates that chronic stress; reflected in sustained elevation of cortisol — is a primary upstream driver of most non-communicable diseases, including cancer, type 2 diabetes, cardiovascular disorders, and depression (Zannas et al., 2019, DOI: 10.1073/pnas.1816847116). Cortisol exerts these effects by reprogramming gene expression via glucocorticoid receptor binding, leading to persistent epigenetic changes.\n",
+    "In modern populations, chronically elevated cortisol levels are strongly linked to sleep deficiency and circadian disruption (Klengel et al., 2015, DOI: 10.1038/npp.2015.235). Prioritizing adequate sleep duration and quality therefore emerges not merely as a lifestyle recommendation, but as the single most effective upstream intervention to reverse pathogenic epigenetic stress signatures and reduce both cortisol and perceived stress levels.\n",
+    "\n",
+    "Our group’s study, “Understanding Stress through Sleep Patterns,” corroborates these findings by showing that sleep duration and quality are inversely related to self-reported stress levels. While the $R^2$ score of 0.51, and the residual plot suggests of non-linear relations between sleep duration, quality and stress levels.\n"
    ]
   },
   {
@@ -38,7 +43,7 @@
    "id": "028a3c4b-c80d-4a31-8a50-09a944573e78",
    "metadata": {},
    "source": [
-    "## 3. Methods & Results"
+    "## 3. Methods"
    ]
   },
   {
@@ -51,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a25b9985-d0fb-4c58-982d-62f7be4fcbb4",
    "metadata": {},
    "outputs": [],
@@ -106,10 +111,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "085050b8-6724-4eb6-bcb8-df2829edb528",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://raw.githubusercontent.com/Muhanad-husn/Sleep-Health-and-Lifestyle/main/data.csv\"\n",
+    "df = pd.read_csv(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bd5652e",
+   "metadata": {},
+   "source": [
+    "**Table 1:** Frist five rows of the Sleep Health & Lifestyle dataset, along with the dimensions of the data. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb9b9913-4187-400f-8cc8-de057c958713",
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The table shows first 5 rows, along with the dimensions of the data\n",
+      "(374, 13)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -254,36 +286,14 @@
        "4         140/90          85         3000    Sleep Apnea  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = \"https://raw.githubusercontent.com/Muhanad-husn/Sleep-Health-and-Lifestyle/main/data.csv\"\n",
-    "df = pd.read_csv(url)\n",
+    "print(df.shape)\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "bb9b9913-4187-400f-8cc8-de057c958713",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(374, 13)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
    ]
   },
   {
@@ -291,12 +301,7 @@
    "id": "ed99db49-fb15-4ac2-bcd6-a4e8a304b598",
    "metadata": {},
    "source": [
-    "The dataset has 374 records and 12 features [excluding the `Person ID`]. In our analysis, we will evaluate the relationships between stress level and three features about sleep wellness. \n",
-    "* `Sleep Duration` (numerical/continuous): hours of sleep per night\n",
-    "* `Quality of Sleep` (numerical/ordinal): self-reported quality of sleep\n",
-    "* `Sleep Disorder` (categorical): diagnosed sleep disorder (None, Insomnia, or Sleep Apnea)\n",
-    "\n",
-    "The target column `Stress Level` is the level of stress assessed through interviews or questionnaires. The values range from 3 (minimum) to 8 (maximum). Our model will predict the stress level as numeric scores through the input features. "
+    "The dataset has 374 records and 12 features [excluding the `Person ID`]. In our analysis, we evaluate the relationships between stress level and three features about sleep wellness. The first feature is `Sleep Duration`, a numerical/continuous variable representing hours of sleep per night. The second is `Quality of Sleep`, a numerical/ordinal measure of self-reported quality of sleep. The third is `Sleep Disorder`, a categorical variable indicating diagnosed sleep disorder (None, Insomnia, or Sleep Apnea). The target column `Stress Level` is the level of stress assessed through interviews or questionnaires. The values range from 3 (minimum) to 8 (maximum). Our model will predict the stress level as numeric scores through the input features."
    ]
   },
   {
@@ -576,13 +581,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3b24fbe5-ad9d-4284-989d-eb456c61e141",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('data/data.csv')\n",
-    "df_clean.to_csv('data/data_clean.csv')"
+    "df.to_csv('data/raw/data.csv')\n",
+    "df_clean.to_csv('data/processed/data_clean.csv')"
    ]
   },
   {
@@ -628,7 +633,7 @@
    "id": "07b9ffc9-3ab7-4e63-b917-31c6e2879aa1",
    "metadata": {},
    "source": [
-    "The below shows a summary of the train data split."
+    "**Table 2:** Descriptive statistics of the training dataset"
    ]
   },
   {
@@ -772,10 +777,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e20bf9d",
+   "metadata": {},
+   "source": [
+    "## 4. Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d1efc14b-0f32-43fe-ac15-82a4cfc46cee",
    "metadata": {},
    "source": [
-    "### 3.3.1 Data Validation"
+    "### 4.1 Data Validation"
    ]
   },
   {
@@ -976,7 +989,7 @@
    "id": "01cde769-fda6-4333-8d51-7a5048a07af9",
    "metadata": {},
    "source": [
-    "### 3.4. Exploratory Data Analysis (EDA)"
+    "### 4.2 Exploratory Data Analysis (EDA)"
    ]
   },
   {
@@ -1145,6 +1158,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "816fc294",
+   "metadata": {},
+   "source": [
+    "**Figure 1:** Exploratory data analysis of sleep features and stress levels. <br>\n",
+    "(a) Scatter plot showing the negative correlation between sleep duration and stress level (r = -0.829, p = 7.188e-77). <br>\n",
+    "(b) Scatter plot demonstrating the strong negative correlation between sleep quality and stress level (r = -0.904, p = 1.534e-111). <br>\n",
+    "(c) Violin plots comparing stress level distributions across different sleep disorder categories, showing elevated stress in individuals with insomnia and sleep apnea. <br>\n",
+    "(d) Kernel density estimation of overall stress level distribution revealing a bimodal pattern with peaks around stress levels 4 and 7-8.<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fb2100ad",
    "metadata": {},
    "source": [
@@ -1201,10 +1226,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "735a6c3c",
+   "metadata": {},
+   "source": [
+    "## 5. Machine Learning Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1354b190-8725-47f4-94ac-f95706d161d1",
    "metadata": {},
    "source": [
-    "### 3.5. Baseline Model"
+    "### 5.1 Baseline Model"
    ]
   },
   {
@@ -1351,7 +1384,7 @@
    "id": "54882b71-dfdb-4e05-a71f-102df1476bfb",
    "metadata": {},
    "source": [
-    "### 3.6. Column Transformation"
+    "### 5.2. Column Transformation"
    ]
   },
   {
@@ -2143,7 +2176,7 @@
    "id": "c7a11a4d-2f6f-4485-a55a-d9bdcd6007e3",
    "metadata": {},
    "source": [
-    "### 3.7. Training and Validation"
+    "### 5.3. Training and Validation"
    ]
   },
   {
@@ -2280,7 +2313,7 @@
    "id": "c660931a-648d-49d5-b907-bd02544d579c",
    "metadata": {},
    "source": [
-    "### 3.9. Model Evaluation"
+    "### 5.4. Model Evaluation"
    ]
   },
   {
@@ -2404,12 +2437,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ccc32482",
+   "metadata": {},
+   "source": [
+    "**Figure 2:** Ridge regression model performance evaluation on test data. <br>\n",
+    "**Left panel** shows actual versus predicted stress levels with the red dashed line representing perfect predictions (R² = 0.52, MSE = 1.25). <br>\n",
+    "**Right panel** displays residual plot showing the difference between actual and predicted values, revealing a slight negative trend indicating the model's tendency to overpredict at lower stress levels and underpredict at higher stress levels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "997e11a3",
    "metadata": {},
    "source": [
-    "- **Actual vs Predicted:** The model shows moderate predictive performance with reasonable alignment along the diagonal line, though there's notable scatter indicating imperfect predictions, particularly for mid-range stress levels (4-6).\n",
-    "\n",
-    "- **Residual Plot:** Residuals show a slight negative trend, suggesting the model tends to overpredict at lower stress levels and underpredict at higher stress levels, indicating potential non-linear relationships in the data."
+    "#### Interpretation of the Plots\n",
+    "The actual vs predicted plot shows moderate predictive performance with reasonable alignment along the diagonal line, though there's notable scatter indicating imperfect predictions, particularly for mid-range stress levels (4-6). The residual plot shows a slight negative trend, suggesting the model tends to overpredict at lower stress levels and underpredict at higher stress levels, indicating potential non-linear relationships in the data."
    ]
   },
   {
@@ -2417,7 +2459,7 @@
    "id": "eb01b422-bcd0-4e1e-b398-192c8a65c578",
    "metadata": {},
    "source": [
-    "## 4. Discussion"
+    "## 6. Discussion"
    ]
   },
   {
@@ -2433,13 +2475,19 @@
     "\n",
     "The findings aligned with our expectations that better sleep patterns would correlate with lower stress levels. However, the model's moderate predictive accuracy suggests that while sleep is a crucial factor, other variables likely contribute significantly to stress. This highlights the complexity of stress as a multifaceted phenomenon influenced by various lifestyle, psychological, and environmental factors.\n",
     "\n",
+    "### Assumptions and Limitations\n",
+    "\n",
+    "To predict stress levels from our features, we employed Ridge regression, which implicitly assumes a linear relationship between the predictors and the target variable. This linearity assumption represents a key limitation, as real-world relationships between sleep parameters, lifestyle factors, and perceived stress are often non-linear (as suggested by some of our EDA scatter plots).\n",
+    "Additionally, we did not incorporate polynomial or interaction terms, further restricting the model’s ability to capture more complex patterns.\n",
+    "Another important limitation arises from the presence of outliers observed in the exploratory data analysis. Because mean squared error (MSE) is highly sensitive to outliers and is reported on a squared scale (making interpretation less intuitive), it may not have been the most robust evaluation metric. Similarly, $R^2$ assumes linearity and can be misleading when the true relationship is non-linear. \n",
+    "\n",
     "### Impact and Applications\n",
     "\n",
     "Understanding the relationship between sleep and stress has important implications for public health. Interventions aimed at improving sleep quality and duration could be effective strategies for stress reduction. There is however a lingering question of which direction the causality goes—does poor sleep lead to higher stress, or does high stress lead to poor sleep? Future studies could explore this bidirectional relationship further.\n",
     "\n",
     "### Future Work\n",
     "\n",
-    "Future research could try to establish the correct direction of causality between sleep and stress through longitudinal studies. Additionally, incorporating more comprehensive lifestyle and psychological variables could enhance the predictive power of models assessing stress levels. Exploring non-linear modeling techniques may also capture complex relationships not addressed by linear regression."
+    "Future research could establish the correct direction of causality between sleep and stress through longitudinal or experimental studies. Additionally, incorporating more comprehensive lifestyle, psychological, and physiological variables (e.g., actigraphy data, cortisol measurements, or validated anxiety/depression scales) could substantially enhance the predictive power of stress-assessment models. Exploring non-linear modeling techniques (e.g., random forests, gradient boosting, or neural networks) and polynomial/interaction terms would better capture the complex relationships evident in the data. Finally, adopting more robust and interpretable evaluation metrics—such as mean absolute error (MAE), Huber loss, or median absolute error—would reduce the influence of outliers and provide clearer insights into model performance."
    ]
   },
   {
@@ -2447,7 +2495,7 @@
    "id": "495dd001",
    "metadata": {},
    "source": [
-    "## 5. Refereneces\n",
+    "## 7. Refereneces\n",
     "\n",
     "Centers for Disease Control and Prevention. (2024). *FastStats: Sleep in adults*. https://www.cdc.gov/sleep/data-research/facts-stats/adults-sleep-facts-and-stats.html\n",
     "\n",
