--- a/sleep-disorder-analysis.ipynb
+++ b/sleep-disorder-analysis.ipynb
@@ -586,8 +586,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('data/raw/data.csv')\n",
-    "df_clean.to_csv('data/processed/data_clean.csv')"
+    "df.to_csv('data/raw/sleep_raw.csv')\n",
+    "df_clean.to_csv('data/processed/clean_sleep_data.csv')"
    ]
   },
   {
