Fix section numbering

--- a/analysis/sleep-disorder-analysis.ipynb
+++ b/analysis/sleep-disorder-analysis.ipynb
@@ -1218,18 +1218,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "735a6c3c",
-   "metadata": {},
-   "source": [
-    "## 5. Machine Learning Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "1354b190-8725-47f4-94ac-f95706d161d1",
    "metadata": {},
    "source": [
-    "### 5.1 Baseline Model"
+    "### 4.3 Baseline Model"
    ]
   },
   {
@@ -1376,7 +1368,7 @@
    "id": "54882b71-dfdb-4e05-a71f-102df1476bfb",
    "metadata": {},
    "source": [
-    "### 5.2. Column Transformation"
+    "### 4.4 Column Transformation"
    ]
   },
   {
@@ -1432,7 +1424,7 @@
    "id": "c7a11a4d-2f6f-4485-a55a-d9bdcd6007e3",
    "metadata": {},
    "source": [
-    "### 5.3. Training and Validation"
+    "### 4.5. Training and Validation"
    ]
   },
   {
@@ -1569,7 +1561,7 @@
    "id": "c660931a-648d-49d5-b907-bd02544d579c",
    "metadata": {},
    "source": [
-    "### 5.4. Model Evaluation"
+    "### 4.6. Model Evaluation"
    ]
   },
   {
@@ -1713,7 +1705,7 @@
    "id": "eb01b422-bcd0-4e1e-b398-192c8a65c578",
    "metadata": {},
    "source": [
-    "## 6. Discussion"
+    "## 5. Discussion"
    ]
   },
   {
@@ -1749,7 +1741,7 @@
    "id": "495dd001",
    "metadata": {},
    "source": [
-    "## 7. References\n",
+    "## 6. References\n",
     "\n",
     "Centers for Disease Control and Prevention. (2024). *FastStats: Sleep in adults*. https://www.cdc.gov/sleep/data-research/facts-stats/adults-sleep-facts-and-stats.html\n",
     "\n",
