Update section numbering

--- a/analysis/sleep-disorder-analysis.ipynb
+++ b/analysis/sleep-disorder-analysis.ipynb
@@ -1713,25 +1713,25 @@
    "id": "4e1f92f2",
    "metadata": {},
    "source": [
-    "### Summary of Findings\n",
+    "### 5.1. Summary of Findings\n",
     "\n",
     "The analysis revealed strong negative correlations between sleep duration, sleep quality, and stress levels, with sleep quality being the most significant predictor. The linear regression model explained approximately 52% of the variance in stress levels, indicating that these sleep-related features are meaningful but not exhaustive predictors of stress.\n",
     "\n",
-    "### Expected vs Actual Outcomes\n",
+    "### 5.2. Expected vs Actual Outcomes\n",
     "\n",
     "The findings aligned with our expectations that better sleep patterns would correlate with lower stress levels. However, the model's moderate predictive accuracy suggests that while sleep is a crucial factor, other variables likely contribute significantly to stress. This highlights the complexity of stress as a multifaceted phenomenon influenced by various lifestyle, psychological, and environmental factors.\n",
     "\n",
-    "### Assumptions and Limitations\n",
+    "### 5.3. Assumptions and Limitations\n",
     "\n",
     "To predict stress levels from our features, we employed Ridge regression, which implicitly assumes a linear relationship between the predictors and the target variable. This linearity assumption represents a key limitation, as real-world relationships between sleep parameters, lifestyle factors, and perceived stress are often non-linear (as suggested by some of our EDA scatter plots).\n",
     "Additionally, we did not incorporate polynomial or interaction terms, further restricting the model’s ability to capture more complex patterns.\n",
     "Another important limitation arises from the presence of outliers observed in the exploratory data analysis. Because mean squared error (MSE) is highly sensitive to outliers and is reported on a squared scale (making interpretation less intuitive), it may not have been the most robust evaluation metric. Similarly, $R^2$ assumes linearity and can be misleading when the true relationship is non-linear. \n",
     "\n",
-    "### Impact and Applications\n",
+    "### 5.4. Impact and Applications\n",
     "\n",
     "Understanding the relationship between sleep and stress has important implications for public health. Interventions aimed at improving sleep quality and duration could be effective strategies for stress reduction. There is however a lingering question of which direction the causality goes—does poor sleep lead to higher stress, or does high stress lead to poor sleep? Future studies could explore this bidirectional relationship further.\n",
     "\n",
-    "### Future Work\n",
+    "### 5.5. Future Work\n",
     "\n",
     "Future research could establish the correct direction of causality between sleep and stress through longitudinal or experimental studies. Additionally, incorporating more comprehensive lifestyle, psychological, and physiological variables (e.g., actigraphy data, cortisol measurements, or validated anxiety/depression scales) could substantially enhance the predictive power of stress-assessment models. Exploring non-linear modeling techniques (e.g., random forests, gradient boosting, or neural networks) and polynomial/interaction terms would better capture the complex relationships evident in the data. Finally, adopting more robust and interpretable evaluation metrics—such as mean absolute error (MAE), Huber loss, or median absolute error—would reduce the influence of outliers and provide clearer insights into model performance."
    ]
